tests/good/syntax/032-local-where.clap
val x : int = 
   y where val y : int = 42 end

