tests/bad/syntax/032-local-where.clap
val x : int = 
   y where y : int = 42 end

